--- a/kompedium.html
+++ b/kompedium.html
@@ -123,7 +123,7 @@
     <header id="header">
         <h1>Kompedium</h1>
         <div class="nav-links">
-            <h2><a href="Grafiki komputerow3.html">Strona główna</a></h2>
+            <h2><a href="index.html">Strona główna</a></h2>
             <h2><a href="grafika_rastrowa.html">Grafika rastrowa</a></h2>
             <h2><a href="grafika_wektorowa.html">Grafika wektorowa</a></h2>
             <h2><a href="3d.html">Grafika 3D</a></h2>
