--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@ font-size: 15px;
     <header id="header">
         <h1>Strona główna</h1>
         <div class="nav-links">
-            <h2><a href="Grafiki komputerow3.html">Strona główna</a></h2>
+            <h2><a href="index.html">Strona główna</a></h2>
             <h2><a href="grafika_rastrowa.html">Grafika rastrowa</a></h2>
             <h2><a href="grafika_wektorowa.html">Grafika wektorowa</a></h2>
             <h2><a href="3d.html">Grafika 3D</a></h2>
