--- a/grafika_wektorowa.html
+++ b/grafika_wektorowa.html
@@ -140,7 +140,7 @@
                 powiększaniu, co czyni ją bardziej uniwersalną do pracy w różnych rozmiarach.
             </p>
             
-
+<img src="Wektorowa2.png" alt="Przyklad" width="30" height="30">
         </div>
        
         <div class="description">
