--- a/grafika_wektorowa.html
+++ b/grafika_wektorowa.html
@@ -173,6 +173,7 @@
                         wyglądają sztucznie, w porównaniu do bardziej swobodnych rysunków rastrowych.</li>
 
                        </div>
+                <img src="wektorowa8.png" alt="Przyklad" width="30" height="30">
 
                        <img src="Grafika wektorowa4.avif" alt="Opis grafiki komputerowej">
                     <footer>
