--- a/kompedium.html
+++ b/kompedium.html
@@ -132,7 +132,21 @@
     </header>
     <div class="description">
         <div class="text-opis">
-            
+
+            <p>Palety kolorów:</p>
+            <li> RGB (Red, Green, Blue): </li>
+            <li>Każdy składnik ma wartość od 0 do 255 (np. biały to RGB(255, 255, 255), a czarny to RGB(0, 0, 0)).</li>
+            <li>CMYK (Cyan, Magenta, Yellow, Key/Black):</li>
+            <li>Kolory są tworzone przez nakładanie barw na papier (np. czarny to CMYK(0, 0, 0, 100)).</li>
+            <li>Jest odwrotnością RGB – im więcej barwnika, tym ciemniejszy kolor.</li>
+            <li>HEX (Hexadecimal):</li>
+            <li>Wykorzystywany w stronach internetowych i CSS.</li>
+            <li>Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</li>
+
+
+
+
+
         </div>
 
        
