--- a/kompedium.html
+++ b/kompedium.html
@@ -149,6 +149,7 @@
             <li>Wykorzystywany w stronach internetowych i CSS.</li>
             <li>Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</li>
 
+            <img src="rgb.jpeg" alt="Przyklad" width="30" height="30">
 
 
 
