--- a/kompedium.html
+++ b/kompedium.html
@@ -156,7 +156,26 @@
 
         </div>
 
-       
+       <div class="description">
+            <div class="text-opis">
+
+                <p>Rozdzielczości:</p>
+                <li>2K	2048×1152 (16:9)
+                    2K	2048×1024 (2:1)
+                    3K	3072×1728 (16:9)
+                    3K	3072×1536 (2:1)
+                    4K	4096×2304 (16:9)
+                    4K	4096×2048 (2:1)
+                    8K	8192×4608 (16:9)
+                    8K	8192×4096 (2:1)
+                    16K	16384x9216(16:9)
+                    16K	16384x8192 (2:1)</li>
+
+
+
+
+                </div>
+
 
         <footer>
             <p>By Hubert Banasiewicz</p>
