--- a/kompedium.html
+++ b/kompedium.html
@@ -178,6 +178,20 @@
 
                 </div>
 
+            <div class="description">
+            <div class="text-opis">
+             <p>Głębia kolorów:</p>
+
+            <li>liczba bitów użytych do reprezentacji koloru danego piksela w określonym modelu przestrzeni barw (zwykle RGB). Im jest ona wyższa, tym większa jest rozdzielczość tonalna kolorów możliwych do uzyskania przy przetwarzaniu danych graficznych lub generowaniu obrazów na wyświetlaczu.</li>
+
+                <li>Głębię koloru wyraża się w jednostce bpp (od ang. bits per pixel, czyli bitów na piksel).</li>
+            
+
+
+
+
+            </div>
+
 
         <footer>
             <p>By Hubert Banasiewicz</p>
