--- a/kompedium.html
+++ b/kompedium.html
@@ -198,7 +198,7 @@
             <p>Proporcje ekranu:</p>
 
                 <li>  Wymiary wyświetlanego obrazu wyrażone ilorazem jego długości do wysokości (zazwyczaj przedstawione jako x:y lub x×y, przy czym symbol oddzielający wartości, dwukropek lub znak mnożenia, czytane są jako na). Na przykład:</li>
-               <li>16:9</li>  \
+               <li>16:9</li>  
                 <li>4:3</li>
 
             </div>
@@ -209,7 +209,7 @@
             <div class="text-opis">
             <p>Kompresja:</p>   
 
-                <li>zmiana sposobu zapisu informacji w celu zmniejszenia redundancji i tym samym objętości zbioru. Innymi słowy chodzi o wyrażenie tego samego zestawu informacji, lecz za pomocą mniejszej liczby bitów.</li>
+                <li>Zmiana sposobu zapisu informacji w celu zmniejszenia redundancji i tym samym objętości zbioru. Innymi słowy chodzi o wyrażenie tego samego zestawu informacji, lecz za pomocą mniejszej liczby bitów.</li>
                 <li>Działaniem przeciwnym do kompresji jest dekompresja.</li>
 
 
