--- a/kompedium.html
+++ b/kompedium.html
@@ -108,13 +108,13 @@
             <span><b>CMYK (Cyan, Magenta, Yellow, Key/Black):</b> Kolory są tworzone przez nakładanie barw na papier (np. czarny to CMYK(0, 0, 0, 100)).</span>
             <span><b>HEX (Hexadecimal):</b> Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</span>
         </div>
-        <div class="text-opis">
-            <p>Rozdzielczości:</p>
-            <span>2K: 2048×1152 (16:9), 2048×1024 (2:1)</span>
-            <span>3K: 3072×1728 (16:9), 3072×1536 (2:1)</span>
-            <span>4K: 4096×2304 (16:9), 4096×2048 (2:1)</span>
-            <span>8K: 8192×4608 (16:9), 8192×4096 (2:1)</span>
-            <span>16K: 16384×9216 (16:9), 16384×8192 (2:1)</span>
+       <div class="text-opis">
+    <p>Przykłady użycia rozdzielczości:</p>
+    <span><b>2K:</b> Używane w kinach cyfrowych oraz monitorach o wysokiej rozdzielczości.</span>
+    <span><b>4K:</b> Popularne w telewizorach UHD, monitorach gamingowych i produkcji wideo.</span>
+    <span><b>8K:</b> Stosowane w profesjonalnej produkcji filmowej oraz w najnowszych telewizorach premium.</span>
+    <span><b>16K:</b> Eksperymentalne zastosowania w wizualizacjach i symulacjach o bardzo wysokiej szczegółowości.</span>
+
         </div>
         <div class="text-opis">
             <p>Proporcje ekranu:</p>
