--- a/kompedium.html
+++ b/kompedium.html
@@ -102,29 +102,30 @@
         </div>
     </header>
     <div class="description">
-        <div class="text-opis">
-            <p>Palety kolorów:</p>
-            <span><b>RGB (Red, Green, Blue):</b> Każdy składnik ma wartość od 0 do 255 (np. biały to RGB(255, 255, 255), a czarny to RGB(0, 0, 0)).</span>
-            <span><b>CMYK (Cyan, Magenta, Yellow, Key/Black):</b> Kolory są tworzone przez nakładanie barw na papier (np. czarny to CMYK(0, 0, 0, 100)).</span>
-            <span><b>HEX (Hexadecimal):</b> Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</span>
-        </div>
-       <div class="text-opis">
-    <p>Przykłady użycia rozdzielczości:</p>
-    <span><b>2K:</b> Używane w kinach cyfrowych oraz monitorach o wysokiej rozdzielczości.</span>
-    <span><b>4K:</b> Popularne w telewizorach UHD, monitorach gamingowych i produkcji wideo.</span>
-    <span><b>8K:</b> Stosowane w profesjonalnej produkcji filmowej oraz w najnowszych telewizorach premium.</span>
-    <span><b>16K:</b> Eksperymentalne zastosowania w wizualizacjach i symulacjach o bardzo wysokiej szczegółowości.</span>
-
-        </div>
-        <div class="text-opis">
-            <p>Proporcje ekranu:</p>
-            <span><b>4:3:</b> Standardowe monitory i telewizory (np. 1024x768).</span>
-            <span><b>16:9:</b> Współczesne monitory i telewizory (np. 1920x1080, 3840x2160).</span>
-            <span><b>16:10:</b> Popularne w monitorach komputerowych (np. 1920x1200).</span>
-            <span><b>21:9:</b> Ultra szerokie monitory (np. 2560x1080, 3440x1440).</span>
-            <span><b>32:9:</b> Super ultra szerokie monitory (np. 5120x1440).</span>
-        </div>
+    <div class="text-opis">
+        <p>Palety kolorów:</p>
+        <span><b>RGB (Red, Green, Blue):</b> Każdy składnik ma wartość od 0 do 255 (np. biały to RGB(255, 255, 255), a czarny to RGB(0, 0, 0)).</span>
+        <img src="rgb_example.png" alt="Przykład palety RGB" style="width: 100%; max-width: 400px; margin: 10px 0;">
+        <span><b>CMYK (Cyan, Magenta, Yellow, Key/Black):</b> Kolory są tworzone przez nakładanie barw na papier (np. czarny to CMYK(0, 0, 0, 100)).</span>
+        <img src="cmyk_example.png" alt="Przykład palety CMYK" style="width: 100%; max-width: 400px; margin: 10px 0;">
+        <span><b>HEX (Hexadecimal):</b> Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</span>
+        <img src="hex_example.png" alt="Przykład palety HEX" style="width: 100%; max-width: 400px; margin: 10px 0;">
     </div>
+    <div class="text-opis">
+        <p>Rozdzielczości:</p>
+        <span>2K: 2048×1152 (16:9), 2048×1024 (2:1)</span>
+        <img src="2k_example.webp" alt="Przykład rozdzielczości 2K" style="width: 100%; max-width: 400px; margin: 10px 0;">
+        <span>4K: 4096×2304 (16:9), 4096×2048 (2:1)</span>
+        <img src="4k_example.jpeg" alt="Przykład rozdzielczości 4K" style="width: 100%; max-width: 400px; margin: 10px 0;">
+    </div>
+    <div class="text-opis">
+        <p>Proporcje ekranu:</p>
+        <span><b>16:9:</b> Współczesne monitory i telewizory (np. 1920x1080, 3840x2160).</span>
+        <img src="16_9_example.png" alt="Przykład proporcji 16:9" style="width: 100%; max-width: 400px; margin: 10px 0;">
+        <span><b>21:9:</b> Ultra szerokie monitory (np. 2560x1080, 3440x1440).</span>
+        <img src="21_9_example.jpeg" alt="Przykład proporcji 21:9" style="width: 100%; max-width: 400px; margin: 10px 0;">
+    </div>
+</div>
     <footer>
         <p>By Hubert Banasiewicz</p>
     </footer>
