--- a/kompedium.html
+++ b/kompedium.html
@@ -110,27 +110,27 @@
         <div class="text-opis">
             <p>Palety kolorów:</p>
             <span><b>RGB (Red, Green, Blue):</b> Każdy składnik ma wartość od 0 do 255 (np. biały to RGB(255, 255, 255), a czarny to RGB(0, 0, 0)).</span>
-            <img src="images/rgb_example.png" alt="Przykład palety RGB">
+            <img src="rgb_example.png" alt="Przykład palety RGB">
             <span><b>CMYK (Cyan, Magenta, Yellow, Key/Black):</b> Kolory są tworzone przez nakładanie barw na papier (np. czarny to CMYK(0, 0, 0, 100)).</span>
-            <img src="images/cmyk_example.png" alt="Przykład palety CMYK">
+            <img src="cmyk_example.png" alt="Przykład palety CMYK">
             <span><b>HEX (Hexadecimal):</b> Reprezentacja kolorów w postaci szesnastkowej, np. czarny to #000000, biały #FFFFFF, czerwony #FF0000.</span>
-            <img src="images/hex_example.png" alt="Przykład palety HEX">
+            <img src="hex_example.png" alt="Przykład palety HEX">
         </div>
         <div class="text-opis">
             <p>Rozdzielczości:</p>
             <span>2K: 2048×1152 (16:9), 2048×1024 (2:1)</span>
-            <img src="images/2k_example.webp" alt="Przykład rozdzielczości 2K">
+            <img src="2k_example.webp" alt="Przykład rozdzielczości 2K">
             <span>4K: 4096×2304 (16:9), 4096×2048 (2:1)</span>
-            <img src="images/4k_example.jpeg" alt="Przykład rozdzielczości 4K">
+            <img src="4k_example.jpeg" alt="Przykład rozdzielczości 4K">
             
         </div>
         <div class="text-opis">
             <p>Proporcje ekranu:</p>
             
             <span><b>16:9:</b> Współczesne monitory i telewizory (np. 1920x1080, 3840x2160).</span>
-            <img src="images/16_9_example.png" alt="Przykład proporcji 16:9">
+            <img src="16_9_example.png" alt="Przykład proporcji 16:9">
             <span><b>21:9:</b> Ultra szerokie monitory (np. 2560x1080, 3440x1440).</span>
-            <img src="images/21_9_example.jpeg" alt="Przykład proporcji 21:9">
+            <img src="21_9_example.jpeg" alt="Przykład proporcji 21:9">
         </div>
     </div>
     <footer>
