--- a/kompedium.html
+++ b/kompedium.html
@@ -11,10 +11,10 @@
             background-color: white;
             margin: 0;
             padding: 0;
-            min-height: 100vh; /* Zmieniono z height na min-height */
+            min-height: 100vh;
             display: flex;
             flex-direction: column;
-            overflow-y: auto; /* Umożliwia przewijanie */
+            overflow-y: auto;
         }
 
         #header {
@@ -91,6 +91,7 @@
             padding: 10px;
             width: 100%;
             font-size: 15px;
+            position: relative;
         }
     </style>
 </head>
@@ -122,11 +123,9 @@
             <img src="2k_example.webp" alt="Przykład rozdzielczości 2K">
             <span>4K: 4096×2304 (16:9), 4096×2048 (2:1)</span>
             <img src="4k_example.jpeg" alt="Przykład rozdzielczości 4K">
-            
         </div>
         <div class="text-opis">
             <p>Proporcje ekranu:</p>
-            
             <span><b>16:9:</b> Współczesne monitory i telewizory (np. 1920x1080, 3840x2160).</span>
             <img src="16_9_example.png" alt="Przykład proporcji 16:9">
             <span><b>21:9:</b> Ultra szerokie monitory (np. 2560x1080, 3440x1440).</span>
