--- a/grafika_rastrowa.html
+++ b/grafika_rastrowa.html
@@ -111,7 +111,7 @@
             <p>Co to jest grafika rastrowa?</p>
             <span>Grafika rastrowa to rodzaj grafiki komputerowej, w której obraz jest reprezentowany jako siatka pikseli (małych punktów), z których każdy ma określony kolor. W tej metodzie każdy piksel jest elementem składającym się na cały obraz. Przykłady grafik rastrowych to zdjęcia cyfrowe, skany obrazów czy ilustracje komputerowe, które zapisane są w formatach takich jak JPEG, PNG, GIF, BMP czy TIFF.</span>
             <div>
-                <img src="grafika_rastrowa_przyklad1.png" alt="Przykład grafiki rastrowej">
+                <img src="Rastrowa2.png" alt="Przykład grafiki rastrowej">
             </div>
         </div>
         <div class="text-opis">
@@ -120,7 +120,7 @@
             <span>Naturalny wygląd – Obrazy rastrowe, takie jak fotografie, mają realistyczny wygląd, ponieważ bazują na rzeczywistych obrazach, a każdy piksel przechowuje informacje o kolorze i jasności.</span>
             <span>Łatwość edytowania – Grafika rastrowa umożliwia łatwą edycję, pozwalając na manipulowanie poszczególnymi pikselami, retuszowanie, dodawanie efektów czy korekcję kolorów.</span>
             <div>
-                <img src="grafika_rastrowa_przyklad2.png" alt="Zalety grafiki rastrowej">
+                <img src="Rastrowa1.png" alt="Zalety grafiki rastrowej">
             </div>
         </div>
         <div class="text-opis">
@@ -129,9 +129,14 @@
             <span>Duży rozmiar plików – szczególnie przy wysokiej rozdzielczości.</span>
             <span>Trudności w edytowaniu – ciężko zmieniać szczegóły obrazu bez utraty jakości.</span>
             <span>Problemy ze skalowaniem – trudne do powiększenia bez utraty ostrości.</span>
-            <div>
-                <img src="grafika_rastrowa_przyklad3.jpeg" alt="Wady grafiki rastrowej">
-            </div>
+        </div>
+        <div class="text-opis">
+            <p>Programy do pracy z grafiką rastrową:</p>
+            <span><b>Adobe Photoshop:</b> Profesjonalne narzędzie do edycji zdjęć i grafiki rastrowej.</span>
+            <span><b>GIMP:</b> Darmowy program do edycji grafiki rastrowej, oferujący wiele zaawansowanych funkcji.</span>
+            <span><b>Corel PHOTO-PAINT:</b> Narzędzie do edycji zdjęć i tworzenia grafiki rastrowej, będące częścią pakietu CorelDRAW.</span>
+            <span><b>Paint.NET:</b> Darmowy program do podstawowej edycji grafiki rastrowej, idealny dla początkujących.</span>
+            <span><b>Krita:</b> Darmowy program do tworzenia cyfrowych ilustracji i edycji grafiki rastrowej.</span>
         </div>
     </div>
     <footer>
