--- a/grafika_wektorowa.html
+++ b/grafika_wektorowa.html
@@ -122,7 +122,7 @@
             <span>Edytowalność – łatwo modyfikować poszczególne elementy obrazu, jak zmiana koloru, kształtu czy rozmiaru.</span>
             <span>Idealna do druku – dzięki wysokiej rozdzielczości przy skalowaniu, grafika wektorowa świetnie nadaje się do druku w dużych formatach, np. na plakatach czy banerach.</span>
             <div>
-                <img src="grafika_wektorowa_zalety.jpeg" alt="Przykład zalet grafiki wektorowej">
+                <img src="grafika_wektorowa_zalety.jpeg" alt="Zalety grafiki wektorowej">
             </div>
         </div>
         <div class="text-opis">
@@ -132,8 +132,16 @@
             <span>Wymaga precyzyjnego projektowania – dla uzyskania wysokiej jakości efektów konieczna jest dokładność, co może być czasochłonne.</span>
             <span>Mniej naturalna w przypadku rysunków ręcznych – wektorowa grafika może sprawiać, że rysunki wyglądają sztucznie, w porównaniu do bardziej swobodnych rysunków rastrowych.</span>
             <div>
-                <img src="grafika_wektorowa_wady.jpeg" alt="Przykład wad grafiki wektorowej">
+                <img src="grafika_wektorowa_wady.jpeg" alt="Wady grafiki wektorowej">
             </div>
+        </div>
+        <div class="text-opis">
+            <p>Programy do pracy z grafiką wektorową:</p>
+            <span><b>Adobe Illustrator:</b> Profesjonalne narzędzie do tworzenia grafiki wektorowej.</span>
+            <span><b>CorelDRAW:</b> Popularny program do projektowania grafiki wektorowej.</span>
+            <span><b>Inkscape:</b> Darmowy program do tworzenia i edycji grafiki wektorowej.</span>
+            <span><b>Affinity Designer:</b> Nowoczesne narzędzie do projektowania grafiki wektorowej.</span>
+            <span><b>Gravit Designer:</b> Darmowy program online do tworzenia grafiki wektorowej.</span>
         </div>
     </div>
     <footer>
